--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "mern-chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "8.12.0"
+  },
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-  "heroku-postbuild": "cd client && npm install && npm run build"
+    "start": "node ./server.js",
+  "heroku-postbuild": "cd client && npm install && npm run build && npm-run-all"
   },
   "author": "",
   "license": "ISC",
